# Qt-Hyprpaper-GUI

./: .gitignore  CMakeLists.txt  NOTICE  README.md
Executable/: Qt-Hyprpaper-GUI
docs/: hyprpaper.conf
src/: cachedimage.h  gpu_renderer.cpp  gpu_renderer.h  inotifywatcher.cpp  inotifywatcher.h  main.cpp  paths.h  reload.cpp  reload.h
